--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -36,6 +36,10 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USER }}
         # Password or personal access token used to log against the Docker registry
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - id: string
+      uses: ASzc/change-string-case-action@v5
+      with:
+        string: ${{ github.repository }}
     - name: Build and push strawberry on focal
       uses: docker/build-push-action@v2
       with:
@@ -43,7 +47,7 @@ jobs:
         dockerfile: docker/Dockerfile
         platforms: linux/amd64
         push: ${{ github.event_name != 'pull_request' }}
-        tags: lcas.lincoln.ac.uk/${{ github.repository.lowercase  }}:${{ env.BRANCH }}
+        tags: lcas.lincoln.ac.uk/${{ steps.string.outputs.lowercase }}:${{ env.BRANCH }}
         build-args: |
             BRANCH=${{ env.BRANCH }}
             GITHUB_TOKEN=${{secrets.GITHUB_TOKEN}}
