--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -43,8 +43,7 @@ jobs:
     - name: Build and push strawberry on focal
       uses: docker/build-push-action@v2
       with:
-        context: .
-        dockerfile: docker/Dockerfile
+        context: docker
         platforms: linux/amd64
         push: ${{ github.event_name != 'pull_request' }}
         tags: lcas.lincoln.ac.uk/${{ steps.string.outputs.lowercase }}:${{ env.BRANCH }}
