--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -40,7 +40,7 @@ jobs:
       uses: ASzc/change-string-case-action@v5
       with:
         string: ${{ github.repository }}
-    - name: Build and push strawberry on focal
+    - name: Build ${{ github.repository }} and conditionally push to lcas.lincolnac.uk
       uses: docker/build-push-action@v2
       with:
         context: docker
